Mouse move events can be double processed, causes menu flicker and other issues. b=406362 r=smichaud sr=roc